@@ -423,6 +423,9 @@ extern int enhancedstatusok;
 extern int multilinereplies;
 extern int dsn_ok;
 extern int auth_ok;
+extern int no_smtp_auth_on_25;
+extern char *smtp_auth_username_prompt;
+extern char *smtp_auth_password_prompt;
 extern int auth_failrate;
 extern int ehlo_ok;
 extern int etrn_ok;
