@@ -1,3 +1,12 @@
+2005-06-22  Matti Aarnio  <mea@zmailer.org>
+
+	* man/smtpserver.8.in, smtpserver/cfgread.c,
+	  smtpserver/smtpauth.c, smtpserver/smtpserver.h,
+	  smtpserver/smtpserver.c, proto/smtpserver.conf.in:
+	    - PARAM no-smtp-auth-on-25
+	    - PARAM smtp-auth-username-prompt "..."
+	    - PARAM smtp-auth-password-prompt "..."
+
 2005-06-20  Matti Aarnio  <mea@zmailer.org>
 
 	* smtpserver/smtpauth.c:
